- buddypress-docs: Upgraded plugin from 1.9.0 to 1.9.2 (Trello #1442)
- buddypress-docs: Contributors and Subscribers cannot create documents (Trello #1434)
- reactor: Deleted duplicated favicon (Trello #1419)
- reactor: Allow e-mail in header icons. Changed behaviour when a link is clicked (opening in new window or in current window) (Trello #1437)
- reactor-primaria-1 and reactor-serveis-educatius: Added field email to Fitxa del Centre and modified behaviour of links for contact and map (Trello #1459)
- reactor-primaria-1 and reactor-serveis-educatius: Added id attribute to site logo (Trello #1477)
- bbpress: Converted into a submodule (Trello #1454)
- bbpress: Upgraded from version 2.5.8 to 2.5.11 (Trello #1454)
- tinymce-advanced: Upgraded from version 4.2.8 to 4.3.10.1 (Trello #1445)
- slideshare: Converted into a submodule (Trello #1453)
- slideshare: Upgraded from version 1.9.1 to 1.9.2 (Trello #1453)
- invite-anyone: Upgraded from version 1.3.9 to 1.3.12 (Trello #1443)


Changes 16.10.24
---------------------------------------------------------------------------------------
- GCE: Prevent grouped calendars to belong to categories used to create that calendars (Trello #1371)
- GCE: Fixed grouped calendars not showing in dropdown menu in customizer (Trello #1384)
- Dashboard: Reviewed access to menu options in dashboard for roles xtec_teacher and contributor (Trello #1354)
- wordpress-importer: Upgraded plugin from 0.6.1 to 0.6.3
- agora-functions: Translated text to english and added translation to .po file (Trello #1394)
- mu-common: Allow more attributes in embed tag in visual editor (Trello #1297)
- mu-common: Fixed default comment status. Restored default action about comment status parameter (Trello #1365)
- mu-common: Added Automatic creation of featured image (Imatge resum) (Trello #1284)
- xtec-stats: Fixed Javascript error in Safari in statistics page (Trello #1361)